# gr_simple

./: CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: simpleConfig.cmake
docs/: README.simple
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  simple_history_example.xml  simple_interpolator.xml  simple_simpleGeneralPy.xml  simple_synchronous.xml
include/simple/: CMakeLists.txt  api.h
lib/: CMakeLists.txt  qa_simple.cc  qa_simple.h  test_simple.cc
python/: CMakeLists.txt  __init__.py  history_example.py  interpolator.py  qa_history_example.py  qa_interpolator.py  qa_simpleGeneralPy.py  qa_synchronous.py  simpleGeneralPy.py  synchronous.py
python/.unittests/python/: qa_history_example.xml  qa_interpolator.xml  qa_simpleGeneralPy.xml  qa_synchronous.xml
swig/: CMakeLists.txt  simple_swig.i
